Unexpected weights after parenting with Empty Groups #33889

Closed
opened 2013-01-16 13:50:45 +01:00 by Gaia Clary · 4 comments
Member

%%%--- Operating System, Graphics card ---

Windows 7 (64 bit)
nvidia gtx470

- Blender version with error, and version that worked ---

2.63 or newer (not tested with older blender)

- Short description of error ---

I have unparented a rigged mesh.
Then i have removed the shape keys and the vertex groups
So the mesh is a clean mesh now.

When i take this clean mesh and parent it again the Armature with Empty Groups,
then some vertex groups contain weights.

The problem seems to happen only if the Armature already has other meshes parented.
Parenting to an armature without other meshes seems to work.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

instructions are also in the attached blend file.

  • select the boots plus the armature
  • parent with empty groups
  • edit the boots
  • see vertices added to the groups mPelvis, mTorso, and others

I expect to have only empty groups after parenting with Empty Groups.%%%

%%%--- Operating System, Graphics card --- Windows 7 (64 bit) nvidia gtx470 - Blender version with error, and version that worked --- 2.63 or newer (not tested with older blender) - Short description of error --- I have unparented a rigged mesh. Then i have removed the shape keys and the vertex groups So the mesh is a clean mesh now. When i take this clean mesh and parent it again the Armature with Empty Groups, then some vertex groups contain weights. The problem seems to happen only if the Armature already has other meshes parented. Parenting to an armature without other meshes seems to work. - Steps for others to reproduce the error (preferably based on attached .blend file) --- instructions are also in the attached blend file. - select the boots plus the armature - parent with empty groups - edit the boots - see vertices added to the groups mPelvis, mTorso, and others I expect to have only empty groups after parenting with Empty Groups.%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

%%%I found a hint which might help to find the cause:

In my example file i have used boots which have originally been rigged.
I prepared the demo file as follows:

  • I started with a rigged mesh
  • I Unparent the boots from the original mesh
  • I apply the shape keys and delete all vertex groups

That is what i stored into the Demo file.
And that makes trouble as reported above.

Now here is how i can avoid the trouble:

  • I started with a rigged mesh
  • I Unparent the boots from the original mesh
  • I go to edit mode and empty all vertex groups manually.
  • now delete all vertex groups

Now the boots are somehow "cleaner" than before.
When i try parenting these boots as explained in the demo file,
then now all is well.

I conclude from that, that the problem is NOT in the parenting, but in the
delete All Vertex groups part.

Maybe the delete all vertex groups leaves some invisible traces which
later cause the parenting to fail ?%%%

%%%I found a hint which might help to find the cause: In my example file i have used boots which have originally been rigged. I prepared the demo file as follows: - I started with a rigged mesh - I Unparent the boots from the original mesh - I apply the shape keys and delete all vertex groups That is what i stored into the Demo file. And that makes trouble as reported above. Now here is how i can avoid the trouble: - I started with a rigged mesh - I Unparent the boots from the original mesh - I go to edit mode and empty all vertex groups manually. - now delete all vertex groups Now the boots are somehow "cleaner" than before. When i try parenting these boots as explained in the demo file, then now all is well. I conclude from that, that the problem is NOT in the parenting, but in the delete All Vertex groups part. Maybe the delete all vertex groups leaves some invisible traces which later cause the parenting to fail ?%%%

%%%fixed r53986%%%

%%%fixed r53986%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33889
No description provided.